--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>CELESTIALS. YOUR GATEWAY TO WEB3 </h1>
     <h2>OUR MISSION </h2>
-    <p>At CelestialsLFG, we're more than just an alpha group for NFT enthusiasts - we're your gateway to the boundless world of Web3. Our purpose is rooted in the belief that everyone, regardless of their background or expertise, should have the opportunity to thrive in this new digital frontier.
+    <p>Mark At CelestialsLFG, we're more than just an alpha group for NFT enthusiasts - we're your gateway to the boundless world of Web3. Our purpose is rooted in the belief that everyone, regardless of their background or expertise, should have the opportunity to thrive in this new digital frontier.
 
         We're here to demystify the complexities of blockchain, NFTs, and decentralized ecosystems. Through education, mentorship, and a vibrant community, we guide newcomers, providing them with the tools, knowledge, and confidence they need to navigate this exciting realm.
         
