--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Celestials Web3</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
+  <title>Personal website</title>
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
+  <nav class="navbar">
+    <div class="navdiv">
+      <div class="logo"><a href="https://onepiece.fandom.com/wiki/Monkey_D._Luffy"> Onepiece Wiki</a> </div>
+      <ul>
+        <li><a href="https://www.youtube.com/watch?v=ZtaNcXxwSko">Youtube</a></li>
+        <li><a href="https://alfredepogi.github.io/wazzup.html">About</a></li>
+        <li><a href="https://www.facebook.com/Luffy.King.Of.The.Pirates">Facebook</a></li>
+        <button><a href="https://www.justforfun4you.com/my-account/">SignIn</a></button>
+        <button><a href="#">SignOut</a></button>
+      </ul>
+    </div>
     <h1>CELESTIALS. YOUR GATEWAY TO WEB3 </h1>
     <h2>OUR MISSION </h2>
     <p>Mark At CelestialsLFG, we're more than just an alpha group for NFT enthusiasts - we're your gateway to the boundless world of Web3. Our purpose is rooted in the belief that everyone, regardless of their background or expertise, should have the opportunity to thrive in this new digital frontier.
