--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   }
 
     .logo a{
-        font-size: 35px; font-weight: 600; color: white;
+        font-size: 35px; font-weight: 600; color: black;
     }
   li{
     list-style: none; display: inline-block;
