--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
     list-style: none; display: inline-block;
   }
   li a{
-    color: white; font-size: 18px; font-weight: bold; margin-right: 25px;
+    color: black; font-size: 18px; font-weight: bold; margin-right: 25px;
   }
   button{
     background-color: black; margin-left: 10px; border-radius: 10px; padding: 10px; width: 90px;
   }
 
 button a{
-      color: white; font-weight: bold; font-size: 15px;
+      color: black; font-weight: bold; font-size: 15px;
 }
   
 
