--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     color: black; font-size: 18px; font-weight: bold; margin-right: 25px;
   }
   button{
-    background-color: black; margin-left: 10px; border-radius: 10px; padding: 10px; width: 90px;
+    background-color: white; margin-left: 10px; border-radius: 10px; padding: 10px; width: 90px;
   }
 
 button a{
