--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <nav class="navbar">
     <div class="navdiv">
       <ul>
-        <li><a href="https://www.youtube.com/watch?v=ZtaNcXxwSko">Youtube</a></li>
-        <li><a href="https://alfredepogi.github.io/wazzup.html">About</a></li>
-        <li><a href="https://www.facebook.com/Luffy.King.Of.The.Pirates">Facebook</a></li>
-        <button><a href="https://www.justforfun4you.com/my-account/">SignIn</a></button>
+        <li><a href="#">Youtube</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Facebook</a></li>
+        <button><a href="#">SignIn</a></button>
         <button><a href="#">SignOut</a></button>
       </ul>
     </div>
