--- a/index.html
+++ b/index.html
@@ -63,6 +63,17 @@ button a{
 }
   
 
+body {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
 
+h1 {
+    padding-top: 4em;
+}
+p {
+    margin: 2em 0;
+}
 
 </style>
