--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button><a href="#">SignOut</a></button>
       </ul>
     </div>
-    <h1>CELESTIALS. YOUR GATEWAY TO WEB3 </h1>
+    <h1>CELESTIALS. YOUR GATEWAY TO WEB3. </h1>
    
     <img src="assets/COVER.jpg" alt="Profile Pic">
    
