--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="navdiv">
       <ul>
         <li><a href="https://twitter.com/celestialsLFG">Twitter</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="https://pixiegagaa.github.io/Celestials.github.io/about.html?fbclid=IwAR0cPxQgBhJx-EijQwEAiguNolahMggA48opw7ybwjqw1VJfgFv4GEoPRzw">About</a></li>
         <button><a href="#">SignIn</a></button>
         <button><a href="#">SignOut</a></button>
       </ul>
