--- a/about.html
+++ b/about.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
+  <title>Celestiials Web3</title>
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+</head>
 
+<body>
+  <h1>OUR MISSION </h1>
+    <p>At CelestialsLFG, we're more than just an alpha group for NFT enthusiasts - we're your gateway to the boundless world of Web3. Our purpose is rooted in the belief that everyone, regardless of their background or expertise, should have the opportunity to thrive in this new digital frontier.
+
+        We're here to demystify the complexities of blockchain, NFTs, and decentralized ecosystems. Through education, mentorship, and a vibrant community, we guide newcomers, providing them with the tools, knowledge, and confidence they need to navigate this exciting realm.
+        
+        Our mission is to foster a culture of inclusivity, creativity, and innovation. We believe that by nurturing talent and igniting curiosity, we can collectively shape a more diverse and vibrant Web3 landscape. Together, we'll forge ahead, exploring new horizons and leaving a lasting impact on the future of digital ownership and expression.
+        
+        Join us at CelestialsLFG, and let's embark on this transformative journey into the Web3 universe, hand in hand. Together, we'll unlock the full potential of this exciting new era.</p>
+
+</body>  
