--- a/about.html
+++ b/about.html
@@ -17,5 +17,6 @@
         Our mission is to foster a culture of inclusivity, creativity, and innovation. We believe that by nurturing talent and igniting curiosity, we can collectively shape a more diverse and vibrant Web3 landscape. Together, we'll forge ahead, exploring new horizons and leaving a lasting impact on the future of digital ownership and expression.
         
         Join us at CelestialsLFG, and let's embark on this transformative journey into the Web3 universe, hand in hand. Together, we'll unlock the full potential of this exciting new era.</p>
+ <img src="assets/COVER.jpg" alt="Profile Pic">
 
 </body>  
