--- a/about.html
+++ b/about.html
@@ -20,3 +20,18 @@
  <img src="assets/COVER.jpg" alt="Profile Pic">
 
 </body>  
+
+body {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+h1 {
+    padding-top: 4em;
+}
+p {
+    margin: 2em 0;
+}
+
+</style>
