--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
+ background: url("https://cdn.mos.cms.futurecdn.net/LZUsfgcXH7WMeVvuHYsoSA-1200-80.png") no-repeat;
+  background-size: cover; 
 }
 
 h1 {
