--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <style class="css">
 
   .navbar{
-    backgroun: crimson; font-family: cailibri; padding-right: 15px;padding-left: 15px;
+    background: crimson; font-family: cailibri; padding-right: 15px;padding-left: 15px;
   }
   .navdiv{
     display: flex; align-items: center; justify-content: space-between;
@@ -48,8 +48,7 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
- background: url("https://cdn.mos.cms.futurecdn.net/LZUsfgcXH7WMeVvuHYsoSA-1200-80.png") no-repeat;
-  background-size: cover; 
+
 }
 
 h1 {
