--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <style class="css">
 
   .navbar{
-    background: crimson; font-family: cailibri; padding-right: 15px;padding-left: 15px;
+    background: white; font-family: cailibri; padding-right: 15px;padding-left: 15px;
   }
   .navdiv{
     display: flex; align-items: center; justify-content: space-between;
